cmake_minimum_required(VERSION 3.7)
set(PROJECT_NAME sfml_project)

project(${PROJECT_NAME})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -static")

set(CMAKE_CXX_STANDARD 14)

set(SOURCE_FILES main.cpp Button.cpp Button.h Slider.cpp Slider.h CheckBox.cpp CheckBox.h ListBox.cpp ListBox.h text.cpp text.h gui.cpp gui.h Slider2.cpp Slider2.h Slider3.cpp Slider3.h MyObject.cpp MyObject.h States.cpp States.h MouseEvents.cpp MouseEvents.h Label.cpp Label.h ObjectStates.cpp ObjectStates.h TextInput.cpp TextInput.h menubar.cpp menubar.h Logo.cpp Logo.h ColorPicker.cpp ColorPicker.h)

if (CMAKE_BUILD_TYPE STREQUAL "Release")
    add_executable(${PROJECT_NAME} WIN32 ${SOURCE_FILES})
else ()
    add_executable(${PROJECT_NAME} ${SOURCE_FILES})
endif ()

set(SFML_ROOT C:/SFML-2.5.1)
set(SFML_STATIC_LIBRARIES TRUE)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
#set(SFML_DIR C:/SFML/SFML-2.5.1/lib/cmake/SFML)
find_package(SFML  REQUIRED COMPONENTS audio graphics window system)
if (SFML_FOUND)
    include_directories(${SFML_INCLUDE_DIR})
    target_link_libraries(${PROJECT_NAME} ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
endif ()